fixing animated text of the menus on hover on tablet version

--- a/css/choix.scss
+++ b/css/choix.scss
@@ -33,13 +33,10 @@
         width:100%;
         font-size: 14px;
         white-space: nowrap;
-        transition: 0.8s;
+        transition: 0.5s;
 
         /*overflow: hidden;
         text-overflow: ellipsis;*/
-        
-        overflow-x: hidden;
-        text-overflow: ellipsis;
     }
     p{
         //background-color: mediumpurple;
@@ -50,7 +47,7 @@
         white-space: nowrap;
         overflow-x: hidden;
         text-overflow: ellipsis;
-        transition: 0.8s;
+        transition: 0.5s;
     }
     //background-color: #9ac41c;
     width: 65%;
@@ -66,7 +63,7 @@
     .text h3{
         //background-color: tomato;
         width: 65%;
-        animation: push  ease ;
+        animation: push1  ease ;
     }
     .text p{
         //background-color: rgb(71, 63, 61);
@@ -76,7 +73,7 @@
 }
 
 
-@keyframes push{
+@keyframes push1{
     0%{
         //background-color: violet;
         width: 100%;
@@ -107,6 +104,7 @@
             width: 50%;
             margin-left: 24vw;
         }
+        
         //background-color: yellowgreen;
         display: flex;
         flex-wrap: wrap;
@@ -115,13 +113,66 @@
 
 
     .choix .text{
+        h3{
+            //background-color: blue;
+            width: 100%;
+            transition: 0.5s;
+        }
+        p{
+            //background-color: cadetblue;
+            width: 100%;
+            transition: 0.5s;
+        }
+        //background-color: rgb(99, 90, 74);
+        width: 80%;
+        transition: 0.5s;
+    }
+
+    
+    .choix:hover {
+        .text h3{ 
+            //background-color: rgb(71, 255, 71);
+            //border: 1px solid black;
+            width: 98%;
+            animation: push3  ease  ;
+        }
         .text p{
+            //background-color: rgb(179, 84, 60);
+            width: 73%;
+            animation: push4  ease  ;
+        }
+        .text{
+            //background-color: crimson;
+            width: 80%;
+        }
+    }
+    
+       
+    @keyframes push3{
+        0%{
+            //background-color: violet;
             width: 100%;
         }
-        //background-color: orange;
-        width: 80%;
+        100%{
+            //background-color: rgb(70, 49, 12);
+            width: 98%;
+        }
     }
+
+        @keyframes push4{
+            0%{
+                //background-color: rgb(245, 6, 6);
+                width: 100%;
+            }
+            100%{
+                //background-color: rgb(212, 207, 207);
+                width: 73%;
+            }
+        }
+    
+     
 }
+
 
 
 
